--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,16 @@
-# Prerequisites
-*.d
+*
+!**/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-!*.cpp
-!*.hpp
-!*.h
 !*.c
-a.out
-.vscode/
-*.o
+!*.cpp
+!*.cc
+!*.h
+!*.hpp
 
-*.log
-test.cpp
-src/test.cpp
+!*.txt
+!*.md
 
-CMakeFiles/
-CMakeCache.txt
+!.gitignore
 
-adlServer
+build/CMakeFiles/
+build/CMakeCache.txt
